--- a/contador-pdf-backend/.gitignore
+++ b/contador-pdf-backend/.gitignore
@@ -2,6 +2,8 @@ HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
+!gradlew
+!gradlew.bat
 !**/src/main/**/build/
 !**/src/test/**/build/
 
@@ -35,3 +37,4 @@ out/
 
 ### VS Code ###
 .vscode/
+
